# log_to_loki

./: LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
src/log_to_loki/: __init__.py  loki_handler.py
tests/: test_loki_handler.py
